# IDS706_DataEngineering_Rust_CLI_Binary

./: .gitignore  Cargo.toml  Makefile  README.md
.devcontainer/: Dockerfile
.github/workflows/: build.yml  format.yml  lint.yml  test.yml
src/: create.rs  delete.rs  main.rs  read.rs  update.rs
