[package]
name = "IDS706_DataEngineering_BarbaraFlores_Miniproject8"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = "0.25.2"
prettytable = "0.10.0"
csv = "1.3"

[[bin]]
name = "main"
path = "src/main.rs"

[profile.release]
opt-level = "z"
debug = false
rpath = true